Fixes a bug positioning the post cover on Safari for iPhone X.

--- a/_source/_sass/_layout.scss
+++ b/_source/_sass/_layout.scss
@@ -80,7 +80,7 @@ article.older-post {
   img {
     position: absolute;
     z-index: -1;
-    top: -30rem;
+    top: -10%;
     left: -25%;
     min-width: 150vw;
     object-fit: cover;
